--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "appid": "wx43d84dd5adbf8791",
+  "appid": "wxbbe55c57709425c1",
   "compileType": "miniprogram",
   "libVersion": "3.8.12",
   "packOptions": {
